# InstinctAI

./: .gitignore  README.md  cluster_test.py  cluster_tree.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_credentials.txt
backend/: Dockerfile  docker-compose.debug.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/notebooks/: Untitled.ipynb  original_clustering.ipynb  timeseries.ipynb
backend/rag/: AgentManager.py  ChromaDBManager.py  DocumentProcessor.py  ResponseCoordinator.py  __init__.py  config.py
backend/src/: chat.py  s3.py  timeseries.py
backend/src/components/: clustering.py  dataingestion.py  datapreprocessing.py
frontend/: Dockerfile  package-lock.json
frontend/src/Components/: AppBar.jsx
frontend/src/Pages/: Signup.jsx
frontend/src/utils/: axiosInstance.js
src/: s3.py  utils.py
src/components/: clustering.py  dataingestion.py  datapreprocessing.py
