[project]
name = "instinct-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "auto-shap>=1.0.0",
    "bcrypt>=4.3.0",
    "boto3>=1.38.10",
    "fastapi[standard]>=0.115.12",
    "pandas>=2.2.3",
    "pandasai>=3.0.0b17",
    "plotly>=6.0.1",
    "pymongo>=4.12.1",
    "redis>=6.0.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
]
