[project]
name = "instinct-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "auto-shap>=1.0.0",
    "bcrypt>=4.3.0",
    "boto3>=1.38.10",
    "fastapi[standard]>=0.115.12",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.16",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyarrow>=20.0.0",
    "pymongo>=4.12.1",
    "redis>=6.0.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "tabulate>=0.9.0",
    "ujson>=5.10.0",
]
